Bug 173614 - Have FrameLoadRequest take a Frame& instead of a Frame*
Summary: Have FrameLoadRequest take a Frame& instead of a Frame*
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Local Build
Hardware: All All
: P2 Normal
Assignee: Daniel Bates
URL:
Keywords: InRadar
Depends on:
Blocks: 173564
  Show dependency treegraph
 
Reported: 2017-06-20 12:44 PDT by Daniel Bates
Modified: 2017-06-25 20:39 PDT (History)
7 users (show)

See Also:


Attachments
Patch (17.09 KB, patch)
2017-06-20 12:45 PDT, Daniel Bates
no flags Details | Formatted Diff | Diff
Patch (17.09 KB, patch)
2017-06-20 12:46 PDT, Daniel Bates
no flags Details | Formatted Diff | Diff
Patch (17.10 KB, patch)
2017-06-20 12:48 PDT, Daniel Bates
no flags Details | Formatted Diff | Diff
Patch (17.75 KB, patch)
2017-06-20 13:52 PDT, Daniel Bates
bfulgham: review+
bfulgham: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Bates 2017-06-20 12:44:05 PDT
Splitting off from bug #173564. Have the FrameLoadRequest constructor that takes a frame take it by reference instead of by pointer as we assume the frame is non-null.
Comment 1 Daniel Bates 2017-06-20 12:45:22 PDT
Created attachment 313423 [details]
Patch
Comment 2 Daniel Bates 2017-06-20 12:46:31 PDT
Created attachment 313424 [details]
Patch
Comment 3 Build Bot 2017-06-20 12:48:01 PDT
Attachment 313424 [details] did not pass style-queue:


ERROR: Source/WebCore/loader/FrameLoadRequest.cpp:41:  Code inside a namespace should not be indented.  [whitespace/indent] [4]
Total errors found: 1 in 14 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 4 Daniel Bates 2017-06-20 12:48:26 PDT
Created attachment 313425 [details]
Patch
Comment 5 Build Bot 2017-06-20 12:50:46 PDT
Attachment 313425 [details] did not pass style-queue:


ERROR: Source/WebCore/loader/FrameLoadRequest.cpp:41:  Code inside a namespace should not be indented.  [whitespace/indent] [4]
Total errors found: 1 in 14 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 6 Daniel Bates 2017-06-20 13:52:35 PDT
Created attachment 313435 [details]
Patch
Comment 7 Build Bot 2017-06-20 13:53:45 PDT
Attachment 313435 [details] did not pass style-queue:


ERROR: Source/WebCore/loader/FrameLoadRequest.cpp:41:  Code inside a namespace should not be indented.  [whitespace/indent] [4]
Total errors found: 1 in 14 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 8 Brent Fulgham 2017-06-20 15:26:48 PDT
Comment on attachment 313435 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=313435&action=review

r=me

> Source/WebCore/ChangeLog:4
> +        https://bugs.webkit.org/show_bug.cgi?id=173614

Please import to Radar.
Comment 9 Radar WebKit Bug Importer 2017-06-20 15:38:30 PDT
<rdar://problem/32884890>
Comment 10 Daniel Bates 2017-06-20 15:45:28 PDT
Committed r218611: <http://trac.webkit.org/changeset/218611>