Source/WebCore/loader/FrameLoadRequest.cpp
@@ -36,18 +36,18 @@
 
 namespace WebCore {
 
-FrameLoadRequest::FrameLoadRequest(Frame* frame, const ResourceRequest& resourceRequest, ShouldOpenExternalURLsPolicy shouldOpenExternalURLsPolicy, const SubstituteData& substituteData)
-    : m_requester(&frame->document()->securityOrigin())
-    , m_resourceRequest(resourceRequest)
-    , m_shouldCheckNewWindowPolicy(false)
-    , m_substituteData(substituteData)
-    , m_lockHistory(LockHistory::No)
-    , m_lockBackForwardList(LockBackForwardList::No)
-    , m_shouldSendReferrer(MaybeSendReferrer)
-    , m_allowNavigationToInvalidURL(AllowNavigationToInvalidURL::Yes)
-    , m_newFrameOpenerPolicy(NewFrameOpenerPolicy::Allow)
-    , m_shouldReplaceDocumentIfJavaScriptURL(ReplaceDocumentIfJavaScriptURL)
-    , m_shouldOpenExternalURLsPolicy(shouldOpenExternalURLsPolicy)
+FrameLoadRequest::FrameLoadRequest(Frame& frame, const ResourceRequest& resourceRequest, ShouldOpenExternalURLsPolicy shouldOpenExternalURLsPolicy, const SubstituteData& substituteData)
+    : m_requester { &frame.document()->securityOrigin() }
+    , m_resourceRequest { resourceRequest }
+    , m_shouldCheckNewWindowPolicy { false }
+    , m_substituteData { substituteData }
+    , m_lockHistory { LockHistory::No }
+    , m_lockBackForwardList { LockBackForwardList::No }
+    , m_shouldSendReferrer { MaybeSendReferrer }
+    , m_allowNavigationToInvalidURL { AllowNavigationToInvalidURL::Yes }
+    , m_newFrameOpenerPolicy { NewFrameOpenerPolicy::Allow }
+    , m_shouldReplaceDocumentIfJavaScriptURL { ReplaceDocumentIfJavaScriptURL }
+    , m_shouldOpenExternalURLsPolicy { shouldOpenExternalURLsPolicy }
 {
 }
 
